GNOME Bugzilla – Bug 737186
h264parse: Return flushing if we get chained while being set to READY
Last modified: 2014-09-24 17:24:38 UTC
Or not negotiated in the case we would be actually not negotiated Currently we are getting assertions from gst_pb_utils_add_codec_description_to_tag_list because of NULL caps.
Created attachment 286882 [details] [review] h264parse: Return flushing if we get chained while being set to READY
*sigh* another instance of this issue. We seriously need flow returns for queries and events...
Also 1.4 please :)
Attachment 286882 [details] pushed as 4c63326 - h264parse: Return flushing if we get chained while being set to READY